--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-Hi GitHub pages
+<h1>Welcome to the homepage of ViperART's projects</h1>
+
+<h2>List of available projects<h2>
+<ol>
+  <li><a href="https://viperart.github.io/excursion/">Excursion</a></li> 
