--- a/index.html
+++ b/index.html
@@ -2,4 +2,6 @@
 
 <h2>List of available projects<h2>
 <ol>
-  <li><a href="https://viperart.github.io/excursion/">Excursion</a></li> 
+  <li><a href="https://viperart.github.io/excursion/">Excursion</a></li>
+  <li><a href="https://viperart.github.io/Broadway-Design/">Excursion</a></li>
+
