--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   <li><a href="https://viperart.github.io/excursion/">Excursion</a></li>
   <li><a href="https://viperart.github.io/Broadway-Design/">Broadway Design</a></li>
   <li><a href="https://viperart.github.io/My-Times/">My Times</a></li>
+  <li><a href="https://viperart.github.io/Tea-Cozy/">Tea Cozy</a></li>
 </ol>
 
